--- a/style.css
+++ b/style.css
@@ -24,31 +24,26 @@ body {
   width: 100%;
 }
 
+/* .section {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+} */
+
 .container {
   background: var(--Very-dark-blue-card);
   width: auto;
   height: auto;
   padding: 28px;
   border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-
-/* .main {
-  height: 100%;
-  width: 100%;
-} */
 
 .image-main {
   max-width: 100%;
   border-radius: 15px;
   z-index: 2;
 }
-
-/* .image-main:hover {
-  cursor: pointer;
-} */
 
 .top {
   margin-bottom: 18px;
@@ -58,8 +53,6 @@ body {
 
 .absolute-img {
   height: 3em;
-  color: white;
-  display: block;
 }
 
 .absolute {
@@ -73,6 +66,7 @@ body {
   display: grid;
   place-content: center;
   opacity: 0;
+  border-radius: 15px;
   transition: 300ms ease-in-out;
 }
 
@@ -101,7 +95,7 @@ body {
   line-height: 1.6em;
   color: var(--Soft-blue);
   opacity: 80%;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 }
 
 .icons {
