--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700;900&display=swap");
+@import url(./395px.css);
+@import url(./540px.css);
+@import url(./820px.css);
+@import url(./devicewidth.css);
 
 :root {
   --Very-dark-blue-main: hsl(217, 54%, 11%);
@@ -15,14 +19,14 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: var(--Very-dark-blue-main);
   padding: 25px;
   font-family: Outfit, sans-serif;
   color: white;
   height: 100%;
   width: 100%;
-}
+} */
 
 /* .section {
   height: 100%;
@@ -30,135 +34,3 @@ body {
   display: grid;
   place-items: center;
 } */
-
-.container {
-  background: var(--Very-dark-blue-card);
-  width: auto;
-  height: auto;
-  padding: 28px;
-  border-radius: 20px;
-}
-
-.image-main {
-  max-width: 100%;
-  border-radius: 15px;
-  z-index: 2;
-}
-
-.top {
-  margin-bottom: 18px;
-  position: relative;
-  z-index: 1;
-}
-
-.absolute-img {
-  height: 3em;
-}
-
-.absolute {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
-  height: 100%;
-  width: 100%;
-  display: grid;
-  place-content: center;
-  opacity: 0;
-  border-radius: 15px;
-  transition: 300ms ease-in-out;
-}
-
-.absolute:hover {
-  opacity: 1;
-  cursor: pointer;
-  transition: 300ms ease-in-out;
-  background-color: rgb(0, 255, 255, 0.55);
-}
-
-.title {
-  margin-bottom: 18px;
-  font-size: 1.5em;
-  letter-spacing: 1px;
-  transition: 300ms ease-in-out;
-}
-
-.title:hover {
-  color: var(--Cyan);
-  transition: 300ms ease-in-out;
-}
-
-.para {
-  margin-bottom: 22px;
-  font-size: 1.2em;
-  line-height: 1.6em;
-  color: var(--Soft-blue);
-  opacity: 80%;
-  /* padding-right: 10px; */
-}
-
-.icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 18px;
-}
-
-.num {
-  margin-left: 7px;
-  text-align: center;
-  font-size: 1.2em;
-}
-
-.left {
-  display: flex;
-  place-items: center;
-  color: var(--Cyan);
-  font-family: Outfit, sans-serif;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-
-.right > .num {
-  color: var(--Soft-blue);
-}
-
-.info {
-  border-top: 1.8px solid var(--Very-dark-blue-line);
-  padding-top: 20px;
-}
-
-.info-content {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.info img {
-  height: 2.5em;
-  border-radius: 50%;
-  border: 1.8px solid white;
-}
-
-.info-name {
-  color: var(--White);
-}
-
-.info-para {
-  margin-bottom: 0px;
-  margin-left: 12px;
-}
-
-.info-para span {
-  margin-left: 4px;
-}
-
-.info-name {
-  transition: 300ms ease-in-out;
-}
-
-.info-name:hover {
-  color: var(--Cyan);
-  transition: 300ms ease-in-out;
-}
